// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Detail renders Article Detail 1`] = `
<div
  className="MuiGrid-container-1"
  style={
    Object {
      "marginTop": "4%",
      "paddingBottom": "5%",
    }
  }
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-2-59"
  />
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-10-39 MuiGrid-grid-md-8-65"
  >
    <div
      className="MuiGrid-container-1"
    >
      <div
        style={
          Object {
            "marginBottom": "2%",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
              "marginBottom": "3%",
            }
          }
        >
          <div
            className="MuiAvatar-root-98 MuiAvatar-colorDefault-99"
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "green",
                "height": 50,
                "margin": 10,
                "width": 50,
              }
            }
          >
            A
          </div>
          <div
            style={
              Object {
                "display": "flex",
                "flexDirection": "column",
              }
            }
          >
            <h3
              className="MuiTypography-root-101 MuiTypography-subheading-108"
              style={
                Object {
                  "marginTop": 12,
                }
              }
            >
              Author is deleted
            </h3>
            <p
              className="MuiTypography-root-101 MuiTypography-body1-110 MuiTypography-colorTextSecondary-124"
            >
              22 September 2018
            </p>
          </div>
          <div
            style={
              Object {
                "alignItems": "flex-end",
                "display": "flex",
                "flex": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <button
              className="MuiButtonBase-root-152 MuiButton-root-126 MuiButton-text-128 MuiButton-outlined-134 MuiButton-sizeSmall-149"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "alignSelf": "center",
                  "marginRight": 10,
                }
              }
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-127"
              >
                Edit article
              </span>
              <span
                className="MuiTouchRipple-root-155"
              />
            </button>
            <button
              className="MuiButtonBase-root-152 MuiButton-root-126 MuiButton-text-128 MuiButton-outlined-134 MuiButton-sizeSmall-149"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "alignSelf": "center",
                }
              }
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-127"
              >
                Delete article
              </span>
              <span
                className="MuiTouchRipple-root-155"
              />
            </button>
          </div>
        </div>
        <h1
          className="MuiTypography-root-101 MuiTypography-display1-105 MuiTypography-gutterBottom-118"
        >
          def
        </h1>
        tester
      </div>
    </div>
    <hr
      className="MuiDivider-root-162"
      style={
        Object {
          "marginBottom": 32,
          "marginTop": 32,
        }
      }
    />
    <div
      className="MuiGrid-container-1 MuiGrid-spacing-xs-24-25"
    >
      <div
        className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-md-4-61"
      >
        <div
          id="footer-2"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "flexGrow": 1,
            }
          }
        >
          <div
            className="MuiPaper-root-167 MuiPaper-elevation1-170 MuiPaper-rounded-168 MuiCard-root-166"
            style={
              Object {
                "boxShadow": "0px 0.25px 0.35px 0.35px rgba(0, 0, 0, 0.1)",
                "maxWidth": 385,
              }
            }
          >
            <div
              className="MuiCardMedia-root-194"
              src={undefined}
              style={
                Object {
                  "height": 0,
                  "paddingTop": "56.25%",
                }
              }
            />
            <div
              className="MuiCardContent-root-196"
              style={
                Object {
                  "paddingRight": "2%",
                }
              }
            >
              <h2
                className="MuiTypography-root-101 MuiTypography-caption-111 MuiTypography-gutterBottom-118"
              >
                Related reads
              </h2>
              <h2
                className="MuiTypography-root-101 MuiTypography-subheading-108 MuiTypography-gutterBottom-118"
              >
                def
              </h2>
              <div
                style={
                  Object {
                    "display": "flex",
                    "marginBottom": "3%",
                  }
                }
              >
                <div
                  className="MuiAvatar-root-98 MuiAvatar-colorDefault-99"
                  style={
                    Object {
                      "alignSelf": "center",
                      "backgroundColor": "green",
                      "height": 50,
                      "width": 50,
                    }
                  }
                >
                  A
                </div>
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "column",
                      "marginLeft": 10,
                    }
                  }
                >
                  <p
                    className="MuiTypography-root-101 MuiTypography-body1-110"
                    style={
                      Object {
                        "marginTop": 6,
                      }
                    }
                  >
                    Author is deleted
                  </p>
                  <p
                    className="MuiTypography-root-101 MuiTypography-body1-110 MuiTypography-colorTextSecondary-124"
                    style={
                      Object {
                        "marginTop": 2,
                      }
                    }
                  >
                    22 September 2018
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-2-59"
  />
</div>
`;

exports[`Article Detail renders Article Detail with isDeletingArticle to be true 1`] = `
<div
  className="MuiGrid-container-1"
  style={
    Object {
      "marginTop": "4%",
      "paddingBottom": "5%",
    }
  }
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-2-59"
  />
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-10-39 MuiGrid-grid-md-8-65"
  >
    <div
      className="MuiGrid-container-1"
    >
      <div
        style={
          Object {
            "marginBottom": "2%",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
              "marginBottom": "3%",
            }
          }
        >
          <div
            className="MuiAvatar-root-98 MuiAvatar-colorDefault-99"
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "green",
                "height": 50,
                "margin": 10,
                "width": 50,
              }
            }
          >
            A
          </div>
          <div
            style={
              Object {
                "display": "flex",
                "flexDirection": "column",
              }
            }
          >
            <h3
              className="MuiTypography-root-101 MuiTypography-subheading-108"
              style={
                Object {
                  "marginTop": 12,
                }
              }
            >
              Author is deleted
            </h3>
            <p
              className="MuiTypography-root-101 MuiTypography-body1-110 MuiTypography-colorTextSecondary-124"
            >
              22 September 2018
            </p>
          </div>
          <div
            style={
              Object {
                "alignItems": "flex-end",
                "display": "flex",
                "flex": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <button
              className="MuiButtonBase-root-152 MuiButton-root-126 MuiButton-text-128 MuiButton-outlined-134 MuiButton-sizeSmall-149"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "alignSelf": "center",
                  "marginRight": 10,
                }
              }
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-127"
              >
                Edit article
              </span>
              <span
                className="MuiTouchRipple-root-155"
              />
            </button>
            <button
              className="MuiButtonBase-root-152 MuiButton-root-126 MuiButton-text-128 MuiButton-outlined-134 MuiButton-sizeSmall-149"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "alignSelf": "center",
                }
              }
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-127"
              >
                <div
                  className="MuiCircularProgress-root-204 MuiCircularProgress-colorPrimary-207 MuiCircularProgress-indeterminate-206"
                  role="progressbar"
                  style={
                    Object {
                      "height": 22,
                      "width": 22,
                    }
                  }
                >
                  <svg
                    className="MuiCircularProgress-svg-209"
                    viewBox="22 22 44 44"
                  >
                    <circle
                      className="MuiCircularProgress-circle-210 MuiCircularProgress-circleIndeterminate-212"
                      cx={44}
                      cy={44}
                      fill="none"
                      r={20.2}
                      strokeWidth={3.6}
                      style={Object {}}
                    />
                  </svg>
                </div>
              </span>
              <span
                className="MuiTouchRipple-root-155"
              />
            </button>
          </div>
        </div>
        <h1
          className="MuiTypography-root-101 MuiTypography-display1-105 MuiTypography-gutterBottom-118"
        >
          def
        </h1>
        tester
      </div>
    </div>
    <hr
      className="MuiDivider-root-162"
      style={
        Object {
          "marginBottom": 32,
          "marginTop": 32,
        }
      }
    />
    <div
      className="MuiGrid-container-1 MuiGrid-spacing-xs-24-25"
    >
      <div
        className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-md-4-61"
      >
        <div
          id="footer-2"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "flexGrow": 1,
            }
          }
        >
          <div
            className="MuiPaper-root-167 MuiPaper-elevation1-170 MuiPaper-rounded-168 MuiCard-root-166"
            style={
              Object {
                "boxShadow": "0px 0.25px 0.35px 0.35px rgba(0, 0, 0, 0.1)",
                "maxWidth": 385,
              }
            }
          >
            <div
              className="MuiCardMedia-root-194"
              src={undefined}
              style={
                Object {
                  "height": 0,
                  "paddingTop": "56.25%",
                }
              }
            />
            <div
              className="MuiCardContent-root-196"
              style={
                Object {
                  "paddingRight": "2%",
                }
              }
            >
              <h2
                className="MuiTypography-root-101 MuiTypography-caption-111 MuiTypography-gutterBottom-118"
              >
                Related reads
              </h2>
              <h2
                className="MuiTypography-root-101 MuiTypography-subheading-108 MuiTypography-gutterBottom-118"
              >
                def
              </h2>
              <div
                style={
                  Object {
                    "display": "flex",
                    "marginBottom": "3%",
                  }
                }
              >
                <div
                  className="MuiAvatar-root-98 MuiAvatar-colorDefault-99"
                  style={
                    Object {
                      "alignSelf": "center",
                      "backgroundColor": "green",
                      "height": 50,
                      "width": 50,
                    }
                  }
                >
                  A
                </div>
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "column",
                      "marginLeft": 10,
                    }
                  }
                >
                  <p
                    className="MuiTypography-root-101 MuiTypography-body1-110"
                    style={
                      Object {
                        "marginTop": 6,
                      }
                    }
                  >
                    Author is deleted
                  </p>
                  <p
                    className="MuiTypography-root-101 MuiTypography-body1-110 MuiTypography-colorTextSecondary-124"
                    style={
                      Object {
                        "marginTop": 2,
                      }
                    }
                  >
                    22 September 2018
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-2-59"
  />
</div>
`;
